--- a/backend/.eslintrc
+++ b/backend/.eslintrc
@@ -14,6 +14,7 @@
         ],
         "no-useless-escape":"off",
         "max-len":"off",
-        "no-console":"off"
+        "no-console":"off",
+        "no-unused-vars": "off"
       }
     }
