--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT = 3000
 NODE_ENV = 'production'
-JWT_SECRET = 'DEV_JWT_SECRET'
+JWT_SECRET = 'JWT_SECRET'
 DB_ADDRESS = 'mongodb://localhost:27017'
