--- a/backend/.eslintrc
+++ b/backend/.eslintrc
@@ -15,6 +15,8 @@
         "no-useless-escape":"off",
         "max-len":"off",
         "no-console":"off",
-        "no-unused-vars": "off"
+        "no-unused-vars": "off",
+        "arrow-body-style":"off",
+        "consistent-return":"off"
       }
     }
